[gd_scene load_steps=12 format=3 uid="uid://crci7xuewtyqg"]

[ext_resource type="PackedScene" uid="uid://3q1fmwrua8xf" path="res://assets/Aquafulness/Scenes/Coordlux/bath_place.tscn" id="1_47g7c"]
[ext_resource type="Script" uid="uid://bmk356m72a0q8" path="res://assets/Aquafulness/Scenes/AquaScene/aqua_scene.gd" id="1_rw81e"]
[ext_resource type="PackedScene" uid="uid://db0gfh3dgksql" path="res://assets/Aquafulness/Scenes/Bather/bather.tscn" id="2_mcfkd"]
[ext_resource type="Environment" uid="uid://b4xp743lvgb4u" path="res://assets/Aquafulness/VÃ¤nern_Present_Day.tres" id="3_n0j01"]
[ext_resource type="PackedScene" uid="uid://ds051alhagcog" path="res://assets/Aquafulness/Scenes/Snow/Snow.tscn" id="5_5y3j2"]
[ext_resource type="PackedScene" uid="uid://bf38c65clfohf" path="res://assets/Aquafulness/Scenes/Christmas/Tree.blend" id="6_rw81e"]
[ext_resource type="PackedScene" uid="uid://b2ps6m14qrhkv" path="res://assets/Aquafulness/Scenes/Flower/Flower.tscn" id="7_it46r"]
[ext_resource type="PackedScene" uid="uid://bss5uw1f1p0np" path="res://Spoonie.tscn" id="8_sybmo"]
[ext_resource type="PackedScene" uid="uid://dcawt434tnrwa" path="res://assets/Aquafulness/Scenes/Cloud/Cloud.tscn" id="9_k4v8f"]
[ext_resource type="PackedScene" uid="uid://p2e4bgxha7b0" path="res://assets/Aquafulness/Scenes/Coordlux/RedSeaLine.tscn" id="10_lgsd1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rw81e"]
size = Vector3(557.2794, 124.762634, 762.4247)

[node name="Framnas" type="Node3D"]
script = ExtResource("1_rw81e")

[node name="BathPlace" parent="." instance=ExtResource("1_47g7c")]
transform = Transform3D(-0.78111744, 0, 0.62438416, 0, 1, 0, -0.62438416, 0, -0.78111744, 17.0617, 25.834293, -176.47021)

[node name="Bather" parent="." instance=ExtResource("2_mcfkd")]

[node name="Boundary" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -58.237404, -34.090424, 142.8457)
shape = SubResource("BoxShape3D_rw81e")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("3_n0j01")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 66.72592, 91.72501)
omni_range = 4096.0

[node name="Snow" parent="." instance=ExtResource("5_5y3j2")]
visible = false

[node name="Christmas" type="Node3D" parent="."]
visible = false

[node name="Tree" parent="Christmas" instance=ExtResource("6_rw81e")]
transform = Transform3D(0.0060033826, 0, -0.43642613, 0, 0.3857247, 0, 0.5647896, 0, 0.004638954, -11.025063, 22.433342, -189.4022)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="DayNightController" type="Node3D" parent="."]

[node name="Flower" parent="." instance=ExtResource("7_it46r")]
transform = Transform3D(89.43336, 0, 0, 0, 74.21645, 0, 0, 0, 29.487963, 0, -0.5349884, 0)
visible = false

[node name="Spoonie" parent="." instance=ExtResource("8_sybmo")]
visible = false

[node name="Cloud" parent="." instance=ExtResource("9_k4v8f")]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)
visible = false

[node name="RedSeaLine" parent="." instance=ExtResource("10_lgsd1")]
visible = false

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
